--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,15 +32,18 @@
         <activity
             android:name=".PlayTimeAttack"
             android:label="@string/title_activity_play_time_attack"
+            android:configChanges="orientation|screenSize"
             android:parentActivityName=".Tiempo" >
         </activity>
         <activity
             android:name=".Resultados"
-            android:label="@string/title_activity_resultados" >
+            android:label="@string/title_activity_resultados"
+            android:parentActivityName=".TimeAttack">
         </activity>
         <activity
             android:name=".Revision"
-            android:label="@string/title_activity_revision" >
+            android:label="@string/title_activity_revision"
+            android:parentActivityName=".Resultados" >
         </activity>
     </application>
 
