Agregada transicion a resultados cuando termina el tiempo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".PlayTimeAttack"
             android:label="@string/title_activity_play_time_attack"
             android:configChanges="orientation|screenSize"
-            android:parentActivityName=".Tiempo" >
+            android:parentActivityName=".Tiempo"
+            android:noHistory="true">
         </activity>
         <activity
             android:name=".Resultados"
