Agregada navegacion hacia adelante

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
             android:name=".PlayTimeAttack"
             android:label="@string/title_activity_play_time_attack"
             android:configChanges="orientation|screenSize"
-            android:parentActivityName=".Tiempo"
-            android:noHistory="true">
+            android:parentActivityName=".Tiempo">
         </activity>
         <activity
             android:name=".Resultados"
