--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,14 @@
             android:name=".PlayTimeAttack"
             android:label="@string/title_activity_play_time_attack"
             android:configChanges="orientation|screenSize"
-            android:parentActivityName=".Tiempo">
+            android:parentActivityName=".Tiempo"
+            android:noHistory="true">
         </activity>
         <activity
             android:name=".Resultados"
             android:label="@string/title_activity_resultados"
-            android:parentActivityName=".TimeAttack">
+            android:parentActivityName=".TimeAttack"
+            android:noHistory="true">
         </activity>
         <activity
             android:name=".Revision"
