--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,19 +34,14 @@
             android:name=".PlayTimeAttack"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_play_time_attack"
-            android:noHistory="true"
-            android:parentActivityName=".Tiempo" >
+            android:parentActivityName=".Tiempo"
+            android:noHistory="true" >
         </activity>
         <activity
             android:name=".Resultados"
             android:label="@string/title_activity_resultados"
-<<<<<<< HEAD
             android:noHistory="true"
             android:parentActivityName=".TimeAttack" >
-=======
-            android:parentActivityName=".TimeAttack"
-            >
->>>>>>> 9ba1a1b89fd436bb855de153e3884981b0d2ad74
         </activity>
         <activity
             android:name=".Revision"
