--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,18 @@
         </activity>
         <activity
             android:name=".RamosActivity"
-            android:label="@string/title_activity_time_attack"
+            android:label="@string/title_activity_ramos"
             android:parentActivityName=".MainActivity" >
         </activity>
         <activity
             android:name=".TimeAttackActivity"
-            android:label="@string/title_activity_tiempo"
+            android:label="@string/title_activity_time_attack"
+            android:parentActivityName=".RamosActivity"
+            android:noHistory="true">
+        </activity>
+        <activity
+            android:name=".EndlessActivity"
+            android:label="@string/title_activity_endless"
             android:parentActivityName=".RamosActivity"
             android:noHistory="true">
         </activity>
@@ -34,6 +40,13 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_play_time_attack"
             android:parentActivityName=".TimeAttackActivity"
+            android:noHistory="true" >
+        </activity>
+        <activity
+            android:name=".PlayEndlessActivity"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/title_activity_play_endless"
+            android:parentActivityName=".EndlessActivity"
             android:noHistory="true" >
         </activity>
         <activity
